# Search_Engine

./: Answers.md  AvlTree.h  AvlTreeTest.cpp  CMakeLists.txt  DocumentParser.cpp  DocumentParser.h  QueryProcessor.h  README.md  main.cpp  porter2Stemmer.cpp  stopWords.txt  test_DocumentParser.cpp  test_System.cpp
